<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scrlView"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:fillViewport="true" android:layout_height="fill_parent"
	android:layout_width="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:padding="10dip" android:gravity="center_vertical">

		<TextView android:text="@string/txtGoProDesc" android:id="@+id/txtGoProDesc"
			android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold"></TextView>
		<Button android:text="@string/btnDonate" android:id="@+id/btnDonate"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:onClick="onButtonClicked"></Button>

		<View android:layout_height="10dip" android:layout_width="wrap_content" />
		<View android:layout_height="2dip" android:background="#FF909090"
			android:layout_width="fill_parent" />
		<View android:layout_height="10dip" android:layout_width="wrap_content" />

		<TextView android:text="@string/txtActivationCode"
			android:id="@+id/txtActivationCode" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
		<EditText android:id="@+id/etActCode" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:editable="false"></EditText>
		<Button android:text="@string/btnSendActCode" android:id="@+id/btnSendActCode"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:onClick="onButtonClicked"></Button>

		<View android:layout_height="10dip" android:layout_width="wrap_content" />
		<View android:layout_height="2dip" android:background="#FF909090"
			android:layout_width="fill_parent" />
		<View android:layout_height="10dip" android:layout_width="wrap_content" />

		<TextView android:text="@string/txtSerialNo" android:id="@+id/txtSerialNo"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<EditText android:id="@+id/etSerialNo" android:layout_width="fill_parent"
			android:layout_height="wrap_content"></EditText>
		<Button android:text="@string/btnActivate" android:id="@+id/btnActivate"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:onClick="onButtonClicked" android:enabled="false"></Button>

	</LinearLayout>
</ScrollView>
