<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:orientation="vertical">
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:id="@+id/top_control_bar">
		<LinearLayout android:orientation="horizontal"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:background="@drawable/banner">
			<ImageView android:layout_height="wrap_content"
				android:src="@drawable/icon_50px" android:layout_width="wrap_content" />
			<TextView android:text="@string/app_name" android:id="@+id/txtApp_name"
				android:layout_height="wrap_content" android:textColor="#FFFFFFFF"
				android:paddingLeft="5dip" android:shadowColor="#FF000000"
				android:shadowDx="0" android:shadowDy="-1" android:shadowRadius="0.2"
				android:textSize="18dip" android:textStyle="bold"
				android:gravity="center|center_horizontal" android:layout_width="wrap_content"
				android:layout_gravity="center_vertical|left"></TextView>
		</LinearLayout>
	</RelativeLayout>
	<LinearLayout android:id="@+id/bottom_control_bar"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_alignParentBottom="true" android:background="@drawable/banner"
		android:orientation="vertical" android:paddingLeft="3dip"
		android:paddingRight="3dip" android:paddingTop="6dip"
		android:paddingBottom="4dip">
	</LinearLayout>
	<RelativeLayout android:layout_width="fill_parent"
		android:orientation="vertical" android:layout_height="fill_parent"
		android:layout_below="@id/top_control_bar" android:layout_above="@id/bottom_control_bar">
		<ScrollView android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<LinearLayout android:orientation="vertical"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="center" android:layout_centerHorizontal="true"
				android:layout_centerVertical="true">

				<TextView android:text="@string/txtHostname" android:id="@+id/txtHostname"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
				<Spinner android:id="@+id/sprHostname" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:prompt="@string/hostname_prompt"></Spinner>
				<TableLayout android:id="@+id/tblHostBtn"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:stretchColumns="*">
					<TableRow android:id="@+id/tblHostBtnRow1">
						<Button android:text="@string/btnAdd" android:id="@+id/btnAddHost"
							android:layout_width="fill_parent" android:layout_height="wrap_content"
							android:onClick="onButtonClicked"></Button>
						<Button android:text="@string/btnRem" android:id="@+id/btnRemHost"
							android:layout_width="fill_parent" android:layout_height="wrap_content"
							android:onClick="onButtonClicked" android:enabled="false"></Button>
					</TableRow>
				</TableLayout>
				<Button android:text="@string/btnEditHL" android:id="@+id/btnEditHost"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:onClick="onButtonClicked" android:enabled="false"></Button>

				<View android:layout_height="10dip" android:layout_width="wrap_content" />
				<View android:layout_height="2dip" android:background="#FF909090"
					android:layout_width="fill_parent" />
				<View android:layout_height="10dip" android:layout_width="wrap_content" />

				<TextView android:text="@string/txtLoginname" android:id="@+id/txtLoginname"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
				<Spinner android:id="@+id/sprLoginname"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:prompt="@string/loginname_prompt"></Spinner>
				<TableLayout android:id="@+id/tblLoginBtn"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:stretchColumns="*">
					<TableRow android:id="@+id/tblLoginBtnRow1">
						<Button android:text="@string/btnAdd" android:id="@+id/btnAddLogin"
							android:layout_width="fill_parent" android:layout_height="wrap_content"
							android:onClick="onButtonClicked" android:enabled="false"></Button>
						<Button android:text="@string/btnRem" android:id="@+id/btnRemLogin"
							android:layout_width="fill_parent" android:layout_height="wrap_content"
							android:onClick="onButtonClicked" android:enabled="false"></Button>
					</TableRow>
				</TableLayout>
                <Button android:text="@string/btnEditLN" android:id="@+id/btnEditLogin"
                 android:layout_width="fill_parent" android:layout_height="wrap_content"
                 android:onClick="onButtonClicked" android:enabled="false"></Button>

				<View android:layout_height="10dip" android:layout_width="wrap_content" />
				<View android:layout_height="2dip" android:background="#FF909090"
					android:layout_width="fill_parent" />
				<View android:layout_height="10dip" android:layout_width="wrap_content" />

				<TableLayout android:id="@+id/tblSaveCancelBtn"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:stretchColumns="*">
					<TableRow android:id="@+id/tblSaveCancelBtnRow1">
						<Button android:text="@string/btnSaveNReturn" android:id="@+id/btnSaveNReturn"
							android:layout_width="fill_parent" android:layout_height="wrap_content"
							android:onClick="onButtonClicked"></Button>
						<Button android:text="@string/btnCancelNReturn" android:id="@+id/btnCancelNReturn"
							android:layout_width="fill_parent" android:layout_height="wrap_content"
							android:onClick="onButtonClicked"></Button>
					</TableRow>
				</TableLayout>

			</LinearLayout>
		</ScrollView>
	</RelativeLayout>
</RelativeLayout>