<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:orientation="vertical">
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:id="@+id/top_control_bar">
		<LinearLayout android:orientation="horizontal"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:background="@drawable/banner">
			<ImageView android:layout_height="wrap_content"
				android:src="@drawable/icon_50px" android:layout_width="wrap_content" />
			<TextView android:text="@string/app_name" android:id="@+id/txtApp_name"
				android:layout_height="wrap_content" android:textColor="#FFFFFFFF"
				android:paddingLeft="5dip" android:shadowColor="#FF000000"
				android:shadowDx="0" android:shadowDy="-1" android:shadowRadius="0.2"
				android:textSize="18dip" android:textStyle="bold"
				android:gravity="center|center_horizontal" android:layout_width="wrap_content"
				android:layout_gravity="center_vertical|left"></TextView>
		</LinearLayout>
	</RelativeLayout>
	<LinearLayout android:id="@+id/bottom_control_bar"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_alignParentBottom="true" android:background="@drawable/banner"
		android:orientation="vertical" android:paddingLeft="3dip"
		android:paddingRight="3dip" android:paddingTop="6dip"
		android:paddingBottom="4dip">
	</LinearLayout>
	<RelativeLayout android:layout_width="fill_parent"
		android:orientation="vertical" android:layout_height="fill_parent"
		android:layout_below="@id/top_control_bar" android:layout_above="@id/bottom_control_bar" android:layout_centerVertical="true" android:gravity="center">
		<ScrollView android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<LinearLayout android:orientation="vertical"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="center" android:layout_centerHorizontal="true"
				android:layout_centerVertical="true">

				<TextView android:text="@string/txtImport" android:id="@+id/txtImport"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>

				<EditText android:id="@+id/etImport" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:editable="false"></EditText>
				<TableLayout android:id="@+id/tblImport"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:stretchColumns="*">
					<TableRow android:id="@+id/tblImportRow1">
						<Button android:text="@string/btnChooseFile" android:id="@+id/btnChooseFileImport"
							android:layout_width="fill_parent" android:layout_height="wrap_content"
							android:onClick="onButtonClicked"></Button>
						<Button android:text="@string/btnImport" android:id="@+id/btnImport"
							android:layout_width="fill_parent" android:layout_height="wrap_content"
							android:onClick="onButtonClicked" android:enabled="false"></Button>
					</TableRow>
				</TableLayout>

				<View android:layout_height="10dip" android:layout_width="wrap_content" />
				<View android:layout_height="2dip" android:background="#FF909090"
					android:layout_width="fill_parent" />
				<View android:layout_height="10dip" android:layout_width="wrap_content" />

				<TextView android:text="@string/txtExport" android:id="@+id/txtExport"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
				<Button android:text="@string/btnExport" android:id="@+id/btnExport"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:onClick="onButtonClicked"></Button>

				<View android:layout_height="10dip" android:layout_width="wrap_content" />
				<View android:layout_height="2dip" android:background="#FF909090"
					android:layout_width="fill_parent" />
				<View android:layout_height="10dip" android:layout_width="wrap_content" />

				<Button android:text="@string/btnDelete" android:id="@+id/btnDelete"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:onClick="onButtonClicked"></Button>

			</LinearLayout>
		</ScrollView>
	</RelativeLayout>
</RelativeLayout>
