<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="fill"
    android:orientation="vertical" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/top_control_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_control_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bannerbottomnothard"
        android:orientation="vertical"
        android:paddingBottom="4dip"
        android:paddingLeft="3dip"
        android:paddingRight="3dip"
        android:paddingTop="6dip" >
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_control_bar"
        android:layout_below="@id/top_control_bar"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollViewHostSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtHashtype"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtHashtype" >

                </TextView>

                <Spinner
                    android:id="@+id/sprHashtype"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/hashtypes" 
                    
                    >
                </Spinner>

                <TextView
                    android:id="@+id/txtPasswordLength"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPasswordLength" >

                </TextView>

                <EditText
                    android:id="@+id/etPasswordLength"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" >
                </EditText>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="25dip"
                    android:layout_weight="1" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:layout_weight="1"
                    android:background="@drawable/divider" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="25dip"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/txtCharset"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCharset" >

                </TextView>

                <EditText
                    android:id="@+id/etCharset"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="3" >
                </EditText>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="25dip"
                    android:layout_weight="1" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:layout_weight="1"
                    android:background="@drawable/divider" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="25dip"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onButtonClicked"
                    android:text="@string/btnReset" >
                </Button>
            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

</RelativeLayout>